--- a/package.json
+++ b/package.json
@@ -1,27 +1,13 @@
 {
   "name": "muddle",
   "version": "0.1.0",
-  "description": "Electron-Based MUD Client",
+  "description": "Electron MUD Client",
   "main": "main.js",
   "scripts": {
-    "start": "electron main.js"
+    "start": "electron src/main.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/electron/electron-quick-start.git"
-  },
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial"
-  ],
   "author": "GitHub",
   "license": "CC0-1.0",
-  "bugs": {
-    "url": "https://github.com/electron/electron-quick-start/issues"
-  },
-  "homepage": "https://github.com/electron/electron-quick-start#readme",
   "devDependencies": {
     "electron-prebuilt": "^0.37.0"
   },
