--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "create-react-class": "^15.6.0",
     "react": "^15.0.1",
+    "react-contenteditable": "^2.0.4",
     "react-dom": "^15.0.1"
   }
 }
